--- a/template_Grid/spaceX_style.css
+++ b/template_Grid/spaceX_style.css
@@ -47,11 +47,12 @@
         }
 
         .fl_left {
-            float: left;
+            /* float: left; */
+            
         }
 
         .fl_right {
-            float: right;
+            /* float: right; */
         }
 
         img {
