--- a/Nov6 2021(Grid Templates)/Basic-87/styles/layout.css
+++ b/Nov6 2021(Grid Templates)/Basic-87/styles/layout.css
@@ -32,8 +32,8 @@ img{margin:0; padding:0; border:none; line-height:normal; vertical-align:middle;
 address, article, aside, figcaption, figure, footer, header, nav, section{display:block; margin:0; padding:0;}
 
 q{display:block; padding:0 10px 8px 10px; color:#979797; background-color:#ECECEC; font-style:italic; line-height:normal;}
-q:before{content:'“ '; font-size:26px;}
-q:after{content:' „'; font-size:26px; line-height:0;}
+q:before{content:'ï¿½ '; font-size:26px;}
+q:after{content:' ï¿½'; font-size:26px; line-height:0;}
 
 /* ----------------------------------------------Wrapper-------------------------------------*/
 
@@ -48,7 +48,7 @@ div.wrapper{display:block; width:100%; margin:0; padding:0; text-align:left;}
 
 /*----------------------------------------------Generalise-------------------------------------*/
 
-#header, #container, #footer, #copyright{display:block; width:960px; margin:0 auto;}
+
 
 nav ul{margin:0; padding:0; list-style:none;}
 
@@ -57,20 +57,19 @@ h1, h2, h3, h4, h5, h6{margin:0; padding:0; font-size:32px; font-weight:normal; 
 address{font-style:normal;}
 
 blockquote, q{display:block; padding:8px 10px; color:#979797; background-color:#ECECEC; font-style:italic; line-height:normal;}
-blockquote:before, q:before{content:'“ '; font-size:26px;}
-blockquote:after, q:after{content:' „'; font-size:26px; line-height:0;}
+blockquote:before, q:before{content:'ï¿½ '; font-size:26px;}
+blockquote:after, q:after{content:' ï¿½'; font-size:26px; line-height:0;}
 
 form, fieldset, legend{margin:0; padding:0; border:none;}
 legend{display:none;}
 input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Times,serif;}
-
-.one_quarter, .two_quarter, .three_quarter, .four_quarter{display:block; float:left; margin:0 20px 0 0;}
+.two_quarter, .three_quarter, .four_quarter{display:block; float:left; margin:0 20px 0 0;}
 .one_quarter{width:225px;}
 .two_quarter{width:470px;}
 .three_quarter{width:715px;}
 .four_quarter{width:960px; float:none; margin-right:0; clear:both;}
 
-.one_third, .two_third, .three_third{display:block; float:left; margin:0 30px 0 0;}
+.two_third, .three_third{display:block; float:left; margin:0 30px 0 0;}
 .one_third{width:300px;}
 .two_third{width:630px;}
 .three_third{width:960px; float:none; margin-right:0; clear:both;}
@@ -81,14 +80,11 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 
 #header{padding:20px 0;}
 
-#header #hgroup{float:left; margin:0 0 20px 0;}
 #header #hgroup h1, #header #hgroup h2{font-weight:normal; font-style:normal; text-transform:none;}
 #header #hgroup h1{font-size:36px;}
 #header #hgroup h2{font-size:13px;}
 
-#header nav{display:block; float:right; margin:10px 0 0 0; padding:20px 0; color:#C0BAB6; background-color:#232323;}
 #header nav ul{padding:0 20px;}
-#header nav li{display:inline; margin-right:25px; text-transform:uppercase;}
 #header nav li.last{margin-right:0;}
 #header nav li a{color:#C0BAB6; background-color:#232323;}
 #header nav li a:hover{color:#FF9900; background-color:#232323;}
@@ -118,11 +114,9 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 
 #container #homepage #intro{}
 #container #homepage #intro article{}
-#container #homepage #intro article figure{}
-#container #homepage #intro article figure img{float:right; margin:0 0 10px 0; padding:4px; border:1px solid #D6D6D6;}
-#container #homepage #intro article figure figcaption{float:left; width:460px;}
+
 #container #homepage #intro article figure h2{}
-#container #homepage #intro article figure footer{}
+#container #homepage #intro article figure footer{} 
 
 /*----------------------------------------------Footer-------------------------------------*/
 
