--- a/Assignments/Assignment Grid RWD/Grid RWD Basic 83/styles.css
+++ b/Assignments/Assignment Grid RWD/Grid RWD Basic 83/styles.css
@@ -31,17 +31,13 @@ a {
 header {
   width: 960px;
   margin: 0 auto;
-  background-color: #333333;
   padding: 20px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  background-color: #333333;
+  display:grid;
+  grid-template-columns: auto auto;
+  row-gap: 10px;
 }
 /* ============================Title========================== */
-#title {
-  margin-bottom: 20px;
-}
 #title h1 {
   font-size: 36px;
   font-weight: normal;
@@ -49,11 +45,14 @@ header {
 #title h2 {
   font-size: 13px;
   font-weight: normal;
+  color:#c0bab6;
 }
 /* ============================Form========================== */
 header form {
-  width: 290px;
-  margin: 20px 0;
+  display:grid;
+  grid-template-columns:auto auto;
+  justify-content: end;
+  align-content: center;
 }
 header form fieldset {
   border: none;
@@ -64,10 +63,6 @@ header form #searchbox {
   border: 1px solid #666666;
   font-size: 12px;
   background-color: #232323;
-  font-size: 12px;
-  color: white;
-}
-header form #searchbox textarea select {
   font-size: 12px;
   color: white;
 }
@@ -84,36 +79,34 @@ header form #submit {
 }
 /* ============================Nav========================== */
 nav {
-  clear: both;
+  grid-area:2/1/2/3;
   background-color: #232323;
-  overflow: auto;
-  width: 100%;
   padding: 20px 0;
 }
 nav ul {
   list-style: none;
   padding: 0 20px;
-  overflow: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
+  display:grid;
+  grid-template-columns: repeat(5,1fr);
+  justify-items:center;
 }
 nav ul li {
   text-transform: uppercase;
-  width: auto;
-  height: auto;
-}
-nav ul .last {
-  margin-right: 0;
+  
 }
 /* ================================================================================================================= */
 .container {
-  width: 960px;
-  margin: 0 auto;
+  /* width: 960px;
+  margin: 0 auto; */
   overflow: hidden;
   padding: 30px 0;
   color: #979797;
+  display:grid;
+  grid-template-columns: repeat(auto-fill,minmax(600px,960px));
+  place-content: center;
+
+
+
 }
 /* ============================ Section 1 ========================== */
 .section1 {
@@ -128,48 +121,41 @@ nav ul .last {
 .homepage {
   width: 100%;
   line-height: 1.6em;
-  overflow: auto;
+  /* overflow: auto; */
+  display:grid;
 }
 
 /*---------------Section 2 ----------------- */
 .section2 {
-  overflow: auto;
   color: #979797;
   margin-bottom: 30px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  align-items: start;
+  column-gap: 10px;
 }
 .section2 article {
-  width: 225px;
-  margin-right: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: 1fr;
+  align-items: end ;
+  column-gap: 10px;
 }
 .section2 article figure img {
-  /* float:left; */
   height: 32px;
   width: 32px;
-  flex: 1;
 }
 .section2 article strong {
-  /* float:left; */
-  margin: 8px 0 0 10px;
   font-size: 14px;
   font-weight: bold;
-  flex: 1;
 }
 .section2 article p {
+  grid-area: 2/1/2/3;
+  width:100%;
   padding-top: 5px;
 }
-.section2 .last {
-  margin-right: 0px;
-}
 .readmore {
-  width: 100%;
+  grid-area: 3/1/3/3;
   text-align: right;
 }
 .readmore a {
@@ -181,11 +167,9 @@ nav ul .last {
   line-height: 1.6em;
   width: 100%;
   color: #979797;
-  overflow: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 2fr 1fr ;
+  column-gap: 20px;
 }
 .section3 h2 {
   font-weight: bold;
@@ -196,13 +180,7 @@ nav ul .last {
 }
 .section3 p {
   margin: 13px 0;
-}
-.section3 article {
-  width: 715px;
-}
-.section3 aside {
-  width: 225px;
-}
+} 
 /* ============================================ Footer ============================================  */
 .row3 {
   background-color: #232323;
@@ -210,21 +188,12 @@ nav ul .last {
 footer {
   width: 960px;
   margin: 0 auto;
-  overflow: auto;
-  display: flex;
-  flex-wrap: wrap;
+  display:grid;
+  grid-template-columns: auto auto;
   justify-content: space-between;
-  align-items: center;
 }
 footer p {
   font-size: 13px;
-}
-footer #left_footer {
-  /* float:left; */
-  padding: 20px 0;
-}
-footer #right_footer {
-  /* float:right; */
   padding: 20px 0;
 }
 
@@ -238,7 +207,7 @@ footer #right_footer {
     margin-right: 0;
   }
   header {
-    flex-direction: column;
+    display:block;
     width: 100%;
     text-align: center;
   }
@@ -261,34 +230,26 @@ footer #right_footer {
     margin-bottom: 10px;
   }
   header form {
-      width:100%;
+    width:100%;
     margin: 0;
     margin-bottom: 10px;
+    display:block;
   }
 
   .container {
+    display:block;
     width: 100%;
     padding: 0 10px;
   }
   .section2 {
-    flex-direction: column;
-  }
-  .section2 article {
-    width: 100%;
-    margin: 0;
+    grid-template-columns:auto;
   }
   .section3 {
-    flex-direction: column;
+    grid-template-columns: auto;
   }
-  .section3 article {
-    width: 100%;
-  }
-  .section3 aside {
-    width: 100%;
-  }
-  footer {
-    width: 100%;
-    flex-direction: column;
+  footer 
+  {
+    grid-template-columns:auto;
   }
 }
 /* ============================================ Tablet ============================================  */
