--- a/Assignments/Assignment Grid RWD/Grid RWD Basic 83/styles.css
+++ b/Assignments/Assignment Grid RWD/Grid RWD Basic 83/styles.css
@@ -25,6 +25,9 @@ a {
 
 .row1 {
   background-color: #333333;
+  display:grid;
+  grid-template-columns: repeat(auto-fill,minmax(600px,960px));
+  place-content: center ;
 }
 
 .wrapper {
@@ -33,8 +36,6 @@ a {
 
 /* ============================================ Header  ============================================  */
 header {
-  width: 960px;
-  margin: 0 auto;
   padding: 20px 0;
   background-color: #333333;
   display: grid;
@@ -77,7 +78,6 @@ header form #searchbox {
 }
 
 header form #submit {
-  align-content: center;
   width: 70px;
   font-size: 12px;
   font-weight: bold;
@@ -156,7 +156,6 @@ nav ul li {
   grid-template-columns: auto 1fr;
   grid-template-rows: 1fr;
   align-items: end;
-  column-gap: 10px;
 }
 
 .section2 article figure img {
@@ -236,6 +235,9 @@ footer p {
     margin-right: 0;
   }
 
+  .row1{
+    display:block;
+  }
   header {
     display: block;
     width: 100%;
