--- a/Assignments/Assignment Grid RWD/Grid RWD Basic 84/styles.css
+++ b/Assignments/Assignment Grid RWD/Grid RWD Basic 84/styles.css
@@ -10,11 +10,13 @@
   margin: 0;
   padding: 0;
 }
+
 body {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: 13px;
   color: #c0bab6;
 }
+
 a {
   text-decoration: none;
   color: #c0bab6;
@@ -22,47 +24,47 @@ a {
 
 .row1 {
   background-color: #0007fe;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(600px, 960px));
+  place-content: center;
 }
+
 .wrapper {
   width: 100%;
 }
+
 /* ============================================ Header  ============================================  */
 header {
-  width: 960px;
-  margin: 0 auto;
   padding: 20px 0;
   background-color: #0007fe;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+  display: grid;
+  grid-template-columns: auto auto;
+  row-gap: 10px;
 }
+
 /* ============================Title========================== */
-header #title {
-  /* float:left; */
-  margin-bottom: 20px;
-}
 header #title h1 {
   font-size: 36px;
   font-weight: normal;
 }
+
 header #title h2 {
   font-size: 13px;
   font-weight: normal;
 }
+
 /* ============================Form========================== */
 header form {
-  /* float:right; */
-  width: 290px;
-  margin: 20px 0;
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: end;
+  align-content: center;
 }
+
 header form fieldset {
   border: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
 }
+
 header form #searchbox {
   /* float:left; */
   width: 200px;
@@ -73,12 +75,8 @@ header form #searchbox {
   font-size: 12px;
   color: white;
 }
-header form #searchbox textarea select {
-  font-size: 12px;
-  color: white;
-}
+
 header form #submit {
-  /* float:right; */
   width: 70px;
   font-size: 12px;
   font-weight: bold;
@@ -88,50 +86,60 @@ header form #submit {
   cursor: pointer;
   padding: 5px;
 }
+
 /* ============================Nav========================== */
 nav {
   background-color: #11bdff;
-  width: 100%;
+  grid-area: 2/1/2/3;
   padding: 20px 0;
 }
+
 nav ul {
   list-style: none;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 0 30px;
+  padding: 0;
+  display: grid;
+  /* grid-template-columns: repeat(5, 1fr); */
+  grid-template-columns: repeat(auto-fill, minmax(20%, 1fr));
+  justify-items: center;
 }
+
 nav ul li {
-  margin-right: 25px;
   text-transform: uppercase;
 }
+
 nav ul li a {
   color: #0027ba;
 }
+
 /* ================================================================================================================= */
 
 /* ============================================ Section ============================================  */
 
 .container {
-  width: 960px;
-  margin: 0 auto;
-  overflow: hidden;
   padding: 30px 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(600px, 960px));
+  place-content: center;
 }
+
 /* ============================ Section 1 ========================== */
 .section1 {
   margin-bottom: 30px;
 }
+
 .section1 img {
   width: 100%;
   height: 360px;
 }
+
 /* ============================ Section 2 ========================== */
 .section2 {
   padding: 15px;
-  width: 930px;
+  /* width: 100%; */
   background-color: #cdedfa;
   margin-bottom: 30px;
 }
+
 .section2 p {
   color: #439cbe;
   font-size: 16px;
@@ -139,13 +147,15 @@ nav ul li a {
   text-transform: uppercase;
   text-align: justify;
 }
+
 /* ================================================================= */
 
 /* ============================================ Homepage ============================================  */
-#homepage {
+.homepage {
   width: 100%;
   line-height: 1.6em;
 }
+
 /* ============================ Section 3 ========================== */
 .homepage h1 {
   color: #fc813b;
@@ -156,42 +166,47 @@ nav ul li a {
   border-bottom: 1px solid #d6d6d6;
   text-transform: uppercase;
 }
+
 .section3 {
   margin-bottom: 30px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: start;
+  column-gap: 10px;
 }
+
 .section3 .article {
-  width: 300px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: 1fr;
+  align-items: end;
+  column-gap: 10px;
 }
+
 .section3 .article img {
   height: 32px;
   width: 32px;
-  flex-grow: 1;
 }
+
 .section3 .article strong {
-  margin: 8px 0 0 10px;
   font-size: 14px;
   font-weight: bold;
   color: #3986a3;
-  flex-grow: 2;
 }
+
 .section3 .article p {
-  width:100%;
   color: #439cbe;
   padding-top: 5px;
+  grid-area: 2/1/2/3;
 }
+
 .readmore {
-  clear: both;
+  grid-area: 3/1/3/3;
   color: #919191;
   padding-top: 5px;
   text-align: right;
-  width: 100%;
 }
+
 .readmore a {
   color: #ff9900;
 }
@@ -199,21 +214,23 @@ nav ul li a {
 /* ============================ Section 4 ========================== */
 .section4 {
   margin-bottom: 30px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(200px, 1fr));
+  column-gap: 15px;
 }
-.section4 article {
-  width: 225;
-}
+
 .section4 article figure {
+  display: grid;
+  place-content: center;
   padding: 4px 2px;
   border: 1px solid #d6d6d6;
 }
+
 .section4 article figure img {
   width: 215px;
   height: 315px;
 }
+
 .section4 article figcaption {
   padding: 5px;
   text-align: center;
@@ -221,28 +238,26 @@ nav ul li a {
   background-color: #eeeeee;
   text-transform: uppercase;
 }
+
 /* ================================================================= */
 
 /* ============================================ Footer ============================================  */
 .row3 {
   background-color: #11bdff;
   color: #0027ba;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(600px, 960px));
+  place-content: center;
 }
+
 footer {
-  width: 960px;
-  display: flex;
-  /* flex:wrap; */
+  display: grid;
+  grid-template-columns: auto auto;
   justify-content: space-between;
-  margin: 0 auto;
-  overflow: auto;
 }
+
 footer p {
   font-size: 13px;
-}
-footer #left_footer {
-  padding: 20px 0;
-}
-footer #right_footer {
   padding: 20px 0;
 }
 
@@ -255,140 +270,151 @@ footer #right_footer {
     padding: 0;
     margin-right: 0;
   }
+
+  .row1 {
+    display: block;
+  }
+
   header {
-    flex-direction: column;
+    display: block;
     width: 100%;
     text-align: center;
   }
+
   header nav {
     padding: 0;
   }
+
   header nav ul {
     display: block;
     padding: 0;
   }
+
   header nav ul li {
     border: 3px solid white;
     margin: 10px;
     padding: 10px;
   }
+
   header nav ul li {
     font-weight: bold;
   }
+
   header #title {
     margin-bottom: 10px;
   }
+
   header form {
     width: 100%;
     margin: 0;
     margin-bottom: 10px;
-  }
-  header form fieldset {
     display: block;
   }
 
   .container {
+    display:block;
     width: 100%;
     padding: 30px 10px;
   }
+
   .section1 img {
-    height: auto;
-  }
-  .section2 {
     width: 100%;
+    height: auto;
   }
   .section2 p {
     font-size: 0.8em;
   }
-  .section3 {
-    flex-direction: column;
-  }
-  .section3 article {
-    width: 100%;
-  }
-  .section4{
-    margin:0;
-  }
-  .section4 article{
-    width:100%;
-    display:flex;
-    flex-wrap:wrap;
-    justify-content: center;
 
-  }
-  footer {
-    padding:0 10px;
+  .section3 {
     width: 100%;
-    flex-direction: column;
+    grid-template-columns: auto;
+  }
+  /* .section4 {
+    grid-template-columns: auto;
+  } */
+  .row3 {
+    display: block;
+  }
+
+  footer {
+    grid-template-columns: auto;
+    place-content: center;
+    place-items: center;
   }
 }
+
 /* ============================================ Tablet ============================================  */
-@media only screen and (min-width:601px) and (max-width:768px){
-      * {
-          box-sizing: border-box;
-          padding: 0;
-          margin-right: 0;
-        }
-        header {
-          flex-direction: column;
-          width: 100%;
-          text-align: center;
-        }
-        header nav {
-          padding: 0;
-        }
-        header nav ul {
-          padding: 0;
-        }
-        header nav ul li {
-          margin: 10px;
-          padding: 10px;
-        }
-        header nav ul li {
-          font-weight: bold;
-        }
-        header #title {
-          margin-bottom: 10px;
-        }
-        header form {
-          width:100%;
-          margin: 0;
-          margin-bottom: 10px;
-        }
-        header form fieldset {
-          display: block;
-        }
-        .container {
-          width: 100%;
-          padding: 30px 30px;
-        }
-        .section1 img {
-          height: auto;
-        }
-        .section2 {
-          width: 100%;
-        }
-        .section2 p {
-          font-size: 1em;
-        }
-        .section3 {
-          flex-direction: column;
-        }
-        .section3 .article {
-          width: 100%;
-        }
-        .section4{
-          margin:0;
-        }
-        .section4 article{
-          width:50%;
-          display:flex;
-          flex-wrap:wrap;
-          justify-content: center;
-        }
-        footer {
-          width: 100%;
-          padding:0 30px;
-        }
-      }
+@media only screen and (min-width:601px) and (max-width:768px) {
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin-right: 0;
   }
+
+  header {
+    width: 100%;
+    grid-template-columns: auto;
+    text-align: center;
+  }
+
+  header form {
+    grid-area: 2/1;
+    margin: 0;
+    place-content: center;
+  }
+
+  header nav {
+    grid-area: 3/1;
+  }
+
+  header nav ul {
+    padding: 0;
+  }
+
+  header nav ul li {
+    font-weight: bold;
+  }
+
+  .container {
+    width: 100%;
+    display:block;
+    padding: 30px 30px;
+  }
+
+  .section1 img {
+    height: auto;
+  }
+
+  .section2 {
+    width: 100%;
+    grid-template-columns: auto;
+  }
+
+  .section2 p {
+    font-size: 1em;
+  }
+
+  .section3 {
+    grid-template-columns: auto;
+  }
+
+  .section3 .article {
+    width: 100%;
+  }
+
+  .section4 {
+    grid-template-columns: auto auto;
+    grid-gap:10px;
+  }
+/* 
+  .section4 article {
+    width: 100%;
+    
+  }  */
+
+  footer {
+    width: 100%;
+    padding: 0 30px;
+  }
+}
+}
